<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_share"
            android:icon="@mipmap/share"
            android:orderInCategory="80"
            android:title="@string/menu_share"
            app:showAsAction="always"/>

        <item
            android:id="@+id/action_save"
            android:icon="@mipmap/save"
            android:orderInCategory="90"
            android:title="@string/menu_save"
            app:showAsAction="always"/>
        <item
            android:id="@+id/action_settings"
            android:icon="@mipmap/appointment"
            android:orderInCategory="100"
            android:title="@string/agree"
            app:showAsAction="always"/>
</menu>